Typo title page

--- a/Manuscrit/titlepage.tex
+++ b/Manuscrit/titlepage.tex
@@ -32,7 +32,7 @@
 \begin{tabularx}{18cm}{p{3cm}p{4cm}p{10.5cm}}
 Directeurs de thèse & Yann Guermeur &\small{Equipe ABC, Loria-CNRS -- Nancy}\\
  &Matthieu Geist &\small{Equipe IMS-MaLIS, Supélec -- Metz}\\
- Raporteurs&Rachid Alami &\small{LAAS /  CNRS -- Toulouse}\\
+ Rapporteurs&Rachid Alami &\small{LAAS /  CNRS -- Toulouse}\\
  &Brahim  Chaib-draa&\small{DAMAS, Université Laval -- Québec}\\ 
 Examinateurs &Sylvain Contassot-Vivier&\small{Loria-Université de Lorraine -- Nancy}\\
  &Manuel Lopes&\small{Equipe Flowers, INRIA -- Bordeaux}\\
