--- a/Manuscrit/titlepage.tex
+++ b/Manuscrit/titlepage.tex
@@ -29,9 +29,9 @@
 
 
 \noindent \textbf{Membres du jury}\noindent\\ \noindent
-\begin{tabularx}{18cm}{p{3cm}p{4cm}p{10.5cm}}
-Directeurs de thèse & Yann Guermeur &\small{Equipe ABC, Loria-CNRS -- Nancy}\\
- &Matthieu Geist &\small{Equipe IMS-MaLIS, Supélec -- Metz}\\
+\begin{tabularx}{18cm}{p{3.5cm}p{4cm}p{10.5cm}}
+Directeur de thèse & Yann Guermeur &\small{Equipe ABC, Loria-CNRS -- Nancy}\\
+Co-directeur de thèse &Matthieu Geist &\small{Equipe IMS-MaLIS, Supélec -- Metz}\\
  Rapporteurs&Rachid Alami &\small{LAAS /  CNRS -- Toulouse}\\
  &Brahim  Chaib-draa&\small{DAMAS, Université Laval -- Québec}\\ 
 Examinateurs &Sylvain Contassot-Vivier&\small{Loria-Université de Lorraine -- Nancy}\\
