Titres et fonctions sur la page de garde

--- a/Manuscrit/titlepage.tex
+++ b/Manuscrit/titlepage.tex
@@ -1,6 +1,6 @@
 \renewcommand\maketitle{
-\newgeometry{left=3cm}
 \thispagestyle{empty} \noindent
+\newgeometry{left=1cm}
 \vspace*{-2cm}
 
 \begin{tabular}{l r}
@@ -22,7 +22,7 @@
   \large{\textbf{Edouard Klein}}\\
   \vspace{3cm}
   \LARGE{\textbf{Contributions à l'apprentissage par renforcement inverse}} \\
-  \vspace{5cm}
+  \vspace{4cm}
 \end{center}
 
 %\vspace{0.5cm}
@@ -30,14 +30,14 @@
 
 \noindent \textbf{Membres du jury}\noindent\\ \noindent
 \begin{tabularx}{18cm}{p{3.5cm}p{4cm}p{10.5cm}}
-Directeur de thèse & Yann Guermeur &\small{Equipe ABC, Loria-CNRS -- Nancy}\\
-Co-directeur de thèse &Matthieu Geist &\small{Equipe IMS-MaLIS, Supélec -- Metz}\\
- Rapporteurs&Rachid Alami &\small{LAAS /  CNRS -- Toulouse}\\
- &Brahim  Chaib-draa&\small{DAMAS, Université Laval -- Québec}\\ 
-Examinateurs &Sylvain Contassot-Vivier&\small{Loria-Université de Lorraine -- Nancy}\\
- &Manuel Lopes&\small{Equipe Flowers, INRIA -- Bordeaux}\\
-&Guillaume Laurent&\small{Institut FEMTO-ST / ENSMM, Besançon}\\
-&Olivier Pietquin &\small{Equipe IMS-MaLIS, Supélec -- Metz}
+Directeur de thèse & Dr. Yann Guermeur &\small{Directeur de recherche, Equipe ABC, Loria-CNRS -- Nancy}\\
+Co-directeur de thèse &Dr. Matthieu Geist &\small{Directeur de recherche, Equipe IMS-MaLIS, Supélec -- Metz}\\
+ Rapporteurs&Dr. Rachid Alami &\small{Directeur de recherche, LAAS /  CNRS -- Toulouse}\\
+ &Prof. Brahim  Chaib-draa&\small{Professeur, DAMAS, Université Laval -- Québec}\\ 
+Examinateurs &Prof. Sylvain Contassot-Vivier&\small{Professeur, Loria-Université de Lorraine -- Nancy}\\
+&Dr. Guillaume Laurent&\small{Maître de conférences, Institut FEMTO-ST / ENSMM -- Besançon}\\
+ &Dr. Manuel Lopes&\small{Chargé de recherche, Equipe Flowers, INRIA -- Bordeaux}\\
+&Dr. Olivier Pietquin &\small{Directeur de recherche, Equipe IMS-MaLIS / UMI 2958, Supélec -- Metz}
 \end{tabularx}
 
 \vspace{4em}
