Corrections mineures en série

--- a/Manuscrit/BiblioKlein.bib
+++ b/Manuscrit/BiblioKlein.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Edouard KLEIN at 2013-07-25 09:17:49 +0200 
+%% Created for Edouard KLEIN at 2013-08-01 15:17:13 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{bougrain2012inverse,
+	Author = {Laurent Bougrain and Matthieu Duvinage and Edouard Klein},
+	Date-Added = {2013-08-01 13:17:09 +0000},
+	Date-Modified = {2013-08-01 13:17:09 +0000},
+	Institution = {eNTERFACE Summer Workshop},
+	Title = {Inverse reinforcement learning to control a robotic arm using a Brain-Computer Interface},
+	Year = {2012}}
 
 @inproceedings{klein2011dimentionality,
 	Abstract = {This paper deals with the Inverse Reinforcement Learning framework, whose purpose is to learn control policies from demonstrations by an expert. This method inferes from demonstrations a utility function the expert is allegedly maximizing. In this paper we map the reward space into a subset of smaller dimensionality without loss of generality for all Markov Decision Processes (MDPs). We then present three experimental results showing both the promising aspect of the application of this result to existing IRL methods and its shortcomings. We conclude with considerations on further research.},
@@ -15,9 +23,8 @@
 	Author = {Edouard Klein and Matthieu Geist and Olivier Pietquin},
 	Booktitle = {{Proceedings of the IEEE Workshop on Machine Learning Algorithms, Systems and Applications (MLASA 2011)}},
 	Date-Added = {2013-07-25 07:17:37 +0000},
-	Date-Modified = {2013-07-25 07:17:49 +0000},
+	Date-Modified = {2013-08-01 12:37:30 +0000},
 	Month = {December},
-	Pages = {4 pages},
 	Title = {{Reducing the dimentionality of the reward space in the Inverse Reinforcement Learning problem}},
 	Year = {2011},
 	Bdsk-Url-1 = {http://www.metz.supelec.fr//metz/personnel/geist_mat/pdfs/supelec761.pdf}}
@@ -33,12 +40,10 @@
 @article{klein2012structured1,
 	Abstract = {Cette contribution traite le probl\`eme de l'Apprentissage par Renforcement Inverse (ARI), d\'efini comme la recherche d'une fonction de r\'ecompense pour laquelle le comportement d'un expert (connu par le biais d'une d\'emonstration) est optimal. Nous introduisons SCIRL, un nouvel algorithme qui utilise la grandeur d\'enomm\'ee attribut moyen de l'expert comme la param\'etrisation d'une fonction de score pour un classifieur multi-classe. Cette approche donne une fonction de r\'ecompense pour laquelle la politique de l'expert est (nous le d\'emontrons) quasi-optimale. Contrairement {\`a} la plupart des algorithmes d'ARI existants, SCIRL n'a pas besoin de r\'esoudre le probl\`eme direct de l'Apprentissage par Renforcement. De plus, en utilisant une heuristique il est utilisable uniquement avec des trajectoires \'echantillonn\'ees par l'expert. Nous illustrons cela sur un simulateur de conduite.},
 	Author = {Edouard Klein and Bilal PIOT and Matthieu Geist and Olivier Pietquin},
+	Date-Modified = {2013-08-01 12:37:08 +0000},
 	Journal = {Revue d'Intelligence Artificielle},
 	Month = {Mai},
-	Number = {2/2013},
-	Pages = {155-170},
 	Title = {{Classification structur\'ee pour l'apprentissage par renforcement inverse}},
-	Volume = {27},
 	Year = {2013}}
 
 @inproceedings{klein2012cascading,
@@ -73,8 +78,8 @@
 	Address = {Nancy, France},
 	Author = {Edouard Klein and Bilal PIOT and Matthieu Geist and Olivier Pietquin},
 	Booktitle = {{Actes de la Conf\'erence Francophone sur l'Apprentissage Automatique (Cap 2012)}},
+	Date-Modified = {2013-08-01 12:36:28 +0000},
 	Month = {May},
-	Pages = {1-16},
 	Title = {{Classification structur\'ee pour l'apprentissage par renforcement inverse}},
 	Year = {2012},
 	Bdsk-Url-1 = {http://cap2012.loria.fr/pub/Papers/13.pdf}}
@@ -95,8 +100,8 @@
 	Address = {Honolulu (USA)},
 	Author = {Edouard Klein and Matthieu Geist and Olivier Pietquin},
 	Booktitle = {{Proceedings of the IEEE Workshop on Machine Learning Algorithms, Systems and Applications (MLASA 2011)}},
+	Date-Modified = {2013-08-01 12:37:26 +0000},
 	Month = {December},
-	Pages = {4 pages},
 	Title = {{Reducing the dimentionality of the reward space in the Inverse Reinforcement Learning problem}},
 	Year = {2011},
 	Bdsk-Url-1 = {http://www.metz.supelec.fr//metz/personnel/geist_mat/pdfs/supelec761.pdf}}
@@ -106,8 +111,8 @@
 	Address = {Athens (Greece)},
 	Author = {Edouard Klein and Matthieu Geist and Olivier Pietquin},
 	Booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EWRL 2011)}},
+	Date-Modified = {2013-08-01 12:37:44 +0000},
 	Month = {september},
-	Pages = {12 pages},
 	Publisher = {Springer Verlag - Heidelberg Berlin},
 	Series = {Lecture Notes in Computer Science (LNCS)},
 	Title = {{Batch, Off-policy and Model-free Apprenticeship Learning}},
@@ -119,9 +124,8 @@
 	Address = {Rouen (France)},
 	Author = {Edouard Klein and Matthieu Geist and Olivier Pietquin},
 	Booktitle = {{Sixi\`emes Journ\'ees Francophones de Planification, D\'ecision et Apprentissage pour la conduite de syst\`emes (JFPDA 2011)}},
-	Date-Modified = {2013-06-27 14:53:39 +0000},
+	Date-Modified = {2013-08-01 12:37:39 +0000},
 	Month = {June},
-	Pages = {9 pages},
 	Title = {{Apprentissage par imitation \'etendu au cas batch, off-policy et sans mod\`ele}},
 	Year = {2011},
 	Bdsk-Url-1 = {http://www.metz.supelec.fr/~geist_mat/pdfs/Supelec702.pdf}}
@@ -131,9 +135,8 @@
 	Address = {Barcelona (Spain)},
 	Author = {Edouard Klein and Matthieu Geist and Olivier Pietquin},
 	Booktitle = {{IJCAI Workshop on Agents Learning Interactively from Human Teachers (ALIHT 2011)}},
-	Date-Modified = {2013-06-27 14:53:50 +0000},
+	Date-Modified = {2013-08-01 12:37:34 +0000},
 	Month = {July},
-	Note = {6 pages},
 	Title = {{Batch, Off-policy and Model-Free Apprenticeship Learning}},
 	Year = {2011},
 	Bdsk-Url-1 = {http://www.cs.utexas.edu/~bradknox/IJCAI-ALIHT11/Accepted_Papers.html}}
